syntax="proto3";
package smvs;

option go_package = "github.com/AdamPayzant/COMP4109Project/src/protos/smvsserver";

service Server {
    rpc Register (UserReg) returns (Status);
    rpc getToken (username) returns (authKey);

    rpc UpdateIP (IPupdate) returns (Status);
    rpc UpdateKey (KeyUpdate) returns (Status);

    rpc searchUser(UserQuery) returns (UserList);
    rpc getUser (username) returns (UserInfo);
}

// Generic Response message
// In will just contains some magic number error codes
message Status {
    int32 status = 1;
}

// Sends a username username
message username {
    string username = 1;
}

// Sends an encrypted auth key
message authKey {
    bytes authKey = 1;
}

// User registration message
message UserReg {
    string username = 1;
    bytes key = 2;
    string ip = 3;
}

// User IP update
message IPupdate {
    string username = 1;
    bytes authKey = 2;
    string newIP = 3;
}

message KeyUpdate {
    string username = 1;
    bytes authKey = 2;
    bytes newKey = 3;
}

message UserQuery {
    string query = 1;
}

message UserList {
    repeated string users = 1;
}

message UserInfo {
    bytes publicKey = 1;
    string IP = 2;
}